objects/copado__Environment__c.object
<CustomObject>
    <fields>
        <fullName>Data_Backup_Enforcement__c</fullName>
        <description>Enforce data backups when executing a Data Template deployment to this Environment. The &quot;Before and after deployment&quot; is the recommended option since it registers a precise snapshot of the deployed records for a simple Data Recovery process if needed.</description>
        <inlineHelpText>Enforce data backups when executing a Data Template deployment to this Environment. The &quot;Before and after deployment&quot; is the recommended option since it registers a precise snapshot of the deployed records for a simple Data Recovery process if needed.</inlineHelpText>
        <label>Data Backup Enforcement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before and after deployment</fullName>
                </value>
                <value>
                    <fullName>Before deployment</fullName>
                </value>
                <value>
                    <fullName>After deployment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cml_Is_Production_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the Environment is a Production Org</description>
        <inlineHelpText>Only check this value for Production Environments</inlineHelpText>
        <label>Is Production Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__CommitJobTemplateOverride__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Select a Job Template to override the default Commit Job Template defined in the Pipeline</description>
        <inlineHelpText>Select a Job Template to override the default Commit Job Template defined in the Pipeline</inlineHelpText>
        <label>Commit Job Template Override</label>
        <referenceTo>copado__JobTemplate__c</referenceTo>
        <relationshipLabel>Environments (Commit Job Template Override)</relationshipLabel>
        <relationshipName>Environments2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Compliance_Rule_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Compliance Rule Group</label>
        <referenceTo>copado__Compliance_Rule_Group__c</referenceTo>
        <relationshipLabel>Environments</relationshipLabel>
        <relationshipName>Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Compliance_Scan_Events__c</fullName>
        <label>Compliance Scan Events</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deployments</fullName>
                </value>
                <value>
                    <fullName>Commits</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Compliance_Status__c</fullName>
        <label>Compliance Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Connection_Behavior__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default Behavior for Connections into this Environment</description>
        <label>Incoming Connection Behavior</label>
        <referenceTo>copado__Connection_Behavior__c</referenceTo>
        <relationshipLabel>Environment Default Behavior</relationshipLabel>
        <relationshipName>Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Current_Code_Coverage__c</fullName>
        <label>Current Code Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Current_SCA_Score__c</fullName>
        <inlineHelpText>Current Static Code Analysis Score</inlineHelpText>
        <label>Current SCA Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Deployment_Job_Template_Override__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deployment Job Template Override</label>
        <referenceTo>copado__JobTemplate__c</referenceTo>
        <relationshipLabel>Environments (Deployment Job Template Override)</relationshipLabel>
        <relationshipName>Environments1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Enable_Rollback__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Rollbacks for any Deployments/Promotions have this Environment as destination. Rollbacks will be available for Deployments/Promotions created after this feature is enabled</description>
        <inlineHelpText>Enable Rollbacks for any Deployments/Promotions have this Environment as destination. Rollbacks will be available for Deployments/Promotions created after this feature is enabled</inlineHelpText>
        <label>Enable Rollback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Index_Back_Promotion_metadata__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If enabled, when a Back Promotion is completed and contains Metadata found in User Stories in the destination Environment, the status of the User Story Metadata records of these User Stories will be updated to &quot;Back Promoted&quot;.</inlineHelpText>
        <label>Index Back Promotion Metadata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Last_Compliance_Scan_Date__c</fullName>
        <label>Last Compliance Scan Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copado__Last_Refresh_Date__c</fullName>
        <label>Last Refresh Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>copado__Latest_Deployment_Status__c</fullName>
        <label>Latest Deployment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>In progress</fullName>
                </value>
                <value>
                    <fullName>Completed Successfully</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed with Errors</fullName>
                </value>
                <value>
                    <fullName>Merge Conflict</fullName>
                </value>
                <value>
                    <fullName>Paused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Latest_Deployment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Latest Deployment</label>
        <referenceTo>copado__Deployment__c</referenceTo>
        <relationshipLabel>Environments</relationshipLabel>
        <relationshipName>Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Maximum_SCA_Score__c</fullName>
        <inlineHelpText>Maximum Static Code Analysis Score</inlineHelpText>
        <label>Maximum SCA Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Minimum_Apex_Test_Coverage__c</fullName>
        <defaultValue>0.75</defaultValue>
        <inlineHelpText>Set the Minimum Apex Test Coverage here which will be used for Apex Test Results on the Org Credential detail page.</inlineHelpText>
        <label>Minimum Apex Test Coverage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Namespace__c</fullName>
        <inlineHelpText>If you&apos;re developing managed packages, this will help you to write only one version of the pre/post Apex Code in Selenium Test Suites. Copado will replace any &quot;{!NS}&quot; text with this value.</inlineHelpText>
        <label>Namespace</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Org_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Org ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copado__Platform__c</fullName>
        <defaultValue>&quot;Salesforce&quot;</defaultValue>
        <label>Platform</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                    <default>true</default>
                    <label>Salesforce</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Promotion_Default_Credential__c</fullName>
        <inlineHelpText>The Default Credential for the target Org is always selected by default. Optionally, the Default Credential can be selected only if the user has no Org Credential for the target Org.</inlineHelpText>
        <label>Promotion Default Credential</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Always</fullName>
                    <default>true</default>
                    <label>Always</label>
                </value>
                <value>
                    <fullName>Only If User Has No Org Credential</fullName>
                </value>
                <value>
                    <fullName>All Promotions</fullName>
                    <isActive>false</isActive>
                    <label>All Promotions</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Promotion_Job_Template_Override__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion Job Template Override</label>
        <referenceTo>copado__JobTemplate__c</referenceTo>
        <relationshipLabel>Environments</relationshipLabel>
        <relationshipName>Environments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Run_all_tests__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If selected, &quot;Run all local tests&quot; will be enforced when deploying to this environment.</inlineHelpText>
        <label>Run all local tests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production/Developer</fullName>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
                <value>
                    <fullName>Scratch Org</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Validation_Promotion_Default_Credential__c</fullName>
        <inlineHelpText>The Default Credential for the target Org is always selected by default. Optionally, the Default Credential can be selected only if the user has no Org Credential for the target Org.</inlineHelpText>
        <label>Validation Promotion Default Credential</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All Validation Promotions</fullName>
                    <default>true</default>
                    <label>All Validation Promotions</label>
                </value>
                <value>
                    <fullName>Only If User Has No Org Credential</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Environment</label>
    <listViews>
        <fullName>copado__All</fullName>
        <columns>NAME</columns>
        <columns>copado__Type__c</columns>
        <columns>copado__Minimum_Apex_Test_Coverage__c</columns>
        <columns>copado__Org_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>copado__Maximum_SCA_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Environment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Environments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>copado__Unique_Job_Template</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(
NOT(ISBLANK(copado__CommitJobTemplateOverride__c)),
OR(
copado__CommitJobTemplateOverride__c == copado__Deployment_Job_Template_Override__c,
copado__CommitJobTemplateOverride__c == copado__Promotion_Job_Template_Override__c
)),
AND(
NOT(ISBLANK(copado__Promotion_Job_Template_Override__c)),
OR(
copado__Promotion_Job_Template_Override__c == copado__Deployment_Job_Template_Override__c,
copado__Promotion_Job_Template_Override__c == copado__CommitJobTemplateOverride__c
)),
AND(
NOT(ISBLANK(copado__Deployment_Job_Template_Override__c)),
OR(
copado__Deployment_Job_Template_Override__c == copado__Promotion_Job_Template_Override__c,
copado__Deployment_Job_Template_Override__c == copado__CommitJobTemplateOverride__c
))
)</errorConditionFormula>
        <errorMessage>An environment cannot have the same job template for Commit, Promote and Deploy.</errorMessage>
    </validationRules>
</CustomObject>